--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,11 +8,11 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".LoginActivity" >
+            android:name="zoohigh.oncourse.MainActivity" >
 
         </activity>
 
-        <activity android:name=".CourseAddActivity" >
+        <activity android:name="zoohigh.oncourse.HomeActivity" >
 
         </activity>
 
