--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,17 +7,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name="zoohigh.oncourse.MainActivity" >
-
+        <activity android:name=".MainActivity" >
         </activity>
-
-        <activity android:name="zoohigh.oncourse.HomeActivity" >
-
+        <activity android:name=".HomeActivity" >
         </activity>
-
         <activity android:name=".RecommendationActivity" >
-
         </activity>
     </application>
 
