--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,21 +7,17 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
-        <activity android:name=".MainActivity" >
-        </activity>
-        <activity android:name=".HomeActivity" >
-=======
         <activity
-            android:name="zoohigh.oncourse.MainActivity" >
+            android:name=".LoginActivity" >
 
         </activity>
 
-        <activity android:name="zoohigh.oncourse.HomeActivity" >
+        <activity android:name=".CourseAddActivity" >
 
->>>>>>> parent of 1a56375... Rename/refactor activites/layouts
         </activity>
+
         <activity android:name=".RecommendationActivity" >
+
         </activity>
     </application>
 
