--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <activity android:name=".SplashActivity" >
+
+        </activity>
         <activity android:name=".CourseAddActivity" >
         </activity>
         <activity android:name=".RecommendationActivity" >
